# codejouet_cutfem

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Point.c  Polygon2D.c  Polyhedron3D.c  array_Points.c  array_double.c  bridge_c_fortran.c  bridge_fortran_c.F90  bridge_fortran_c_c_saved  compute_lambdas3D.c  exampleGraphBLAS_c_old  general_clipping.c  integer_linked_list.F90  multicutcell_solver_mod.F90  oldMakefile  polygon_mod.F90  solver_for_graphblas.c  update_clipped.c  vector_Points.c  vector_double.c  vector_int.c
include/: Point.h  Polygon2D.h  Polyhedron3D.h  array_double.h  array_int.h  bridge_c_fortran.h  compute_lambdas3D.h  solver_for_graphblas.h  vector_Points.h  vector_double.h  vector_int.h
src_c/: AStar.c  CMakeLists.txt  NodeWithCost_OrdSet.c  Polygon2D.c  Polyhedron3D.c  array_double.c  array_int.c  bridge_c_fortran.c  compute_lambdas3D.c  csparse.c  edge_collision.c  general_clipping.c  polygon_fusion_and_split.c  update_clipped.c  vector_Points.c  vector_double.c  vector_indices_intersection.c  vector_int.c
src_c/include/: AStar.h  NodeWithCost_OrdSet.h  Polygon2D.h  Polyhedron3D.h  array_Points.h  bridge_c_fortran.h  compute_lambdas3D.h  csparse.h  edge_collision.h  general_clipping.h  my_real.h  polygon_fusion_and_split.h  update_clipped.h  vector_Points.h  vector_double.h  vector_indices_intersection.h  vector_int.h
src_fortran/: CMakeLists.txt  ale_connectivity_mod.F  grid_struct_multicutcell_mod.F90  integer_linked_list.F90  multicutcell_solver_mod.F90  polygon_mod.F90  riemann_solver_mod.F90
src_fortran/include/: my_real.inc
